--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8" />
     <title>Dagnis Portfolio</title>
     <meta name="description" content="Roughly 155 characters" />
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/tic-tac.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTAVOGH7RjYkgCsZOYhIDQ5vjXfkxpj98&libraries=places"></script>
   </head>
   <body>
     <header>
@@ -45,73 +49,204 @@
         <span></span>
         <span></span>
       </div>
-      <div>
-        <section id="home-page">
-          <div class="game-container">
-          </div>
-          <article>
-            <h1>
-              Paving my way in order to become a
-              <b class="dev-txt">developer.</b>
-            </h1>
+
+      <section id="home-page">
+        <article>
+          <h1>
+            Paving my way in order to become a
+            <b class="dev-txt">developer.</b>
+          </h1>
+        </article>
+        <div class="dagnis-img-place">
+          <div class="img-dagnis"></div>
+        </div>
+      </section>
+
+      <section id="about-page">
+        <div id="about-card">
+          <div id="about-img-placeholder"></div>
+          <article id="about-article">
+            <div>
+              <h1 class="about-heading">Sveiks, apmeklētāj!</h1>
+              <p>
+                Es esmu Dagnis Ābols, dzimis Jelgavā, Latvijā. Mans akadēmiskais
+                ceļojums ir sācies Rīgas Tehniskajā universitātē, kur es uzsāku
+                studijas aizraujošajā medicīnas fizikas un inženierzinātņu jomā.
+                Šī unikālā programma ļāva man apvienot divas kaislības -
+                medicīnas zinātnes sarežģīto pasauli un inženierzinātņu
+                pamatprincipus. Lai gan šīs jomas varētu šķist atšķirīgas, esmu
+                pārliecinājies, ka tās viena otru lieliski papildina, veicinot
+                inovācijas un progresu veselības aprūpes jomā. Mani vada vēlme
+                izmantot tehnoloģijas un inženierzinātnes, lai uzlabotu
+                veselības aprūpes procesus. Esmu pārliecināts, ka modernās
+                tehnoloģijas var revolucionāri uzlabot diagnostiku, ārstēšanu un
+                vispārējo pacientu aprūpi. Mani īpaši piesaista modernāko
+                medicīnas ierīču izstrādes joma un datu analīzes izmantošana,
+                lai atklātu slimību izplatības un efektīvu ārstēšanas
+                metodoloģiju sarežģītības nianses. Tomēr dzīve nav saistīta
+                tikai ar akadēmisko izglītību un darbu. Atelpas brīžos es
+                labprāt aizbēgu no steigas un burzmas, pievēršoties video
+                spēlēm. Turklāt es rodu mierinājumu, iedziļinoties zinātniskajā
+                literatūrā un iesaistoties diskusijās, kas saistītas ar
+                jaunākajiem sasniegumiem veselības aprūpē un tehnoloģijās.
+              </p>
+            </div>
           </article>
-          <div id="next-but">
-            <button><a href="#about-page">NEXT PAGE</a></button>
-          </div>
-        </section>
+        </div>
+      </section>
 
-        <section id="about-page">
-        
-
-          <div id="about-card">
-            <div id="about-img-placeholder"></div>
-            <article id="about-article">
-              <div>
-                <h1 class="about-heading">Sveiks, apmeklētāj!</h1>
+      <section id="experience-page">
+        <div class="three-part-layout">
+          <div class="edu-cation">
+            <h1>Education</h1>
+            <br />
+            <ul>
+              <li>
+                <b>Rīgas Tehniskā universitātē</b>
                 <p>
-                  Es esmu Dagnis Ābols, dzimis Jelgavā, Latvijā. Mans
-                  akadēmiskais ceļojums ir sācies Rīgas Tehniskajā universitātē,
-                  kur es uzsāku studijas aizraujošajā medicīnas fizikas un
-                  inženierzinātņu jomā. Šī unikālā programma ļāva man apvienot
-                  divas kaislības - medicīnas zinātnes sarežģīto pasauli un
-                  inženierzinātņu pamatprincipus. Lai gan šīs jomas varētu šķist
-                  atšķirīgas, esmu pārliecinājies, ka tās viena otru lieliski
-                  papildina, veicinot inovācijas un progresu veselības aprūpes
-                  jomā. Mani vada vēlme izmantot tehnoloģijas un
-                  inženierzinātnes, lai uzlabotu veselības aprūpes procesus.
-                  Esmu pārliecināts, ka modernās tehnoloģijas var revolucionāri
-                  uzlabot diagnostiku, ārstēšanu un vispārējo pacientu aprūpi.
-                  Mani īpaši piesaista modernāko medicīnas ierīču izstrādes joma
-                  un datu analīzes izmantošana, lai atklātu slimību izplatības
-                  un efektīvu ārstēšanas metodoloģiju sarežģītības nianses.
-                  Tomēr dzīve nav saistīta tikai ar akadēmisko izglītību un
-                  darbu. Atelpas brīžos es labprāt aizbēgu no steigas un
-                  burzmas, pievēršoties video spēlēm. Turklāt es rodu
-                  mierinājumu, iedziļinoties zinātniskajā literatūrā un
-                  iesaistoties diskusijās, kas saistītas ar jaunākajiem
-                  sasniegumiem veselības aprūpē un tehnoloģijās.
+                  <i>Bachelor's degree. Medical Engineering and Physics</i>
                 </p>
-              </div>
-            </article>
+                <p><i>September 2018 - June 2023</i></p>
+              </li>
+              <br />
+              <li>
+                <b>Elejas vidusskola</b>
+                <p><i>Secondary education</i></p>
+                <p><i>September 2015 - July 2018</i></p>
+              </li>
+              <br />
+              <li>
+                <b>Vilces Pamatskola</b>
+                <p>
+                  <i>Baschelor's degree. Medical Engineering and Physics</i>
+                </p>
+                <p><i>September 2018 - June 2023</i></p>
+              </li>
+            </ul>
           </div>
-        </section>
+          <div class="work-exp">
+            <h1>Work experience</h1>
 
-        <section id="experience-page">
-          <div class="three-part-layout">
-            <div class="edu-cation">
-              <h1>Education</h1>
-            </div>
-            <div class="work-exp">
-              <h1>Work experience</h1>
-            </div>
-            <div class="languages">
-              <h1>Languages</h1>
-            </div>
+            <br />
+            <ul>
+              <li>
+                <b>Radiology chemist</b>
+                <p>
+                  <i
+                    >Riga East University Hospital, Oncology Centre of Latvia</i
+                  >
+                </p>
+                <p><i>September 2022 : Full-time</i></p>
+              </li>
+              <br />
+              <li>
+                <b>Laboratory Assistant</b>
+                <p>
+                  <i
+                    >Riga Technical University, Institute of Biomedical
+                    Engineering and Nanotechnologies</i
+                  >
+                </p>
+                <p><i>January 2022 - September 2022</i></p>
+              </li>
+              <br />
+              <li>
+                <b>Laboratory Assistant</b>
+                <p>
+                  <i>SIA"Elagro trade"</i>
+                </p>
+                <p><i>July 2016 - September 2018</i></p>
+              </li>
+            </ul>
           </div>
-        </section>
+          <div class="languages">
+            <h1>Languages</h1>
+            <br />
+            <ul>
+              <li>
+                <b>Latvian</b>
+                <p>
+                  <i>Native language</i>
+                </p>
+              </li>
+              <br />
+              <li>
+                <b>English</b>
+                <p><i>Professional working proficiency</i></p>
+              </li>
+              <br />
+              <li>
+                <b>Russian</b>
+                <p>
+                  <i>Elementary proficiency</i>
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section id="gallery-page">
+        <div class="grid-container">
+          <div class="grid-item-1"></div>
+          <div class="grid-item-2"></div>
+          <div class="grid-item-3"></div>
+        </div>
+      </section>
+
+      <section id="contacts-page">
+        <div class="contacts-card">
+          <div>
+            <div class="contacts-title"><h2>Contacts</h2></div>
+            <ul>
+              <li><b>E-pasts:</b> dagnisinfo@gmail.com</li>
+              <li><b>Tālrunis:</b> +371 20277079</li>
+              <li>
+                <a href="https://www.instagram.com/dagnis.ab/"
+                  >Instagram konts</a
+                >
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/dagnis-%C4%81bols-/"
+                  >LinkedIn konts</a
+                >
+              </li>
+              <li>
+                <a href="https://www.facebook.com/dagnis.abols.7"
+                  >Facebook konts</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div id="location-place">
+            <div id="map"></div>
+          </div>
+        </div>
+      </section>
+
+      <div class="button-to-top">
+        <a href="#home-page"><i class="fa-solid fa-arrow-up"></i></a>
       </div>
     </main>
+
+    <footer>
+      <div class="footer-content">
+        <div class="footer-menu">
+          <ul>
+            <li><a href="#home-page">Home</a></li>
+            <li><a href="#about-page">About</a></li>
+            <li><a href="#experience-page">Experience</a></li>
+            <li><a href="#gallery-page">Gallery</a></li>
+            <li><a href="#contacts-page"> Contacts</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        &copy; 2023 Dagnis Ābols Portfolio. Visas tiesības aizsargātas
+      </div>
+    </footer>
   </body>
-  
-  <script src="script/tic-tac-toe.js"></script>
+  <script src="script/map.js"></script>
 </html>
